--- a/src/components/cbt/cbt.css
+++ b/src/components/cbt/cbt.css
@@ -1,70 +1,38 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto');
 
-.flex-parent {
+.grid {
+  /* Grid Fallback */
+  margin: 0 auto;
+  max-width: 66em;
+  padding: 1em 0;
+
   display: flex;
-  flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-between;
+  
+  /* Supports Grid */
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(40px, 1fr));
+  grid-auto-rows: minmax(15px, auto);
+  grid-gap: 4px;
 }
 
-
-.weather-list {
-  margin: 20px 0;
-}
-
-.weather-list-item {
-  min-width: 100px;
-  margin: 0 10px;
-  padding: 10px;
-  border: 2px solid #000;
-  border-radius: 20px;
-  background-color: #fff;
-  text-align: center;
+.module {
+  /* Demo-Specific Styles */
+  background: #eaeaea;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 20px;
   cursor: pointer;
-
-  &:first-child {
-    margin-left: 0;
-  }
-
-  &:last-child {
-    margin-right: 0;
-  }
-
-  & > h2 {
-    font-weight: normal;
-  }
+  
+  /* Flex Fallback */
+  margin-left: 5px;
+  margin-right: 5px;
+  flex: 1 1 200px;
 }
 
-.current-day {
-  box-sizing: border-box;
-  padding: 20px;
-  padding-top: 0;
-  border: 2px solid #000;
-  border-radius: 20px;
-  background-color: #fff;
-}
-
-.details {
-  justify-content: flex-start;
-
-  & > div {
-    padding-left: 20px;
-  }
-
-  & > div:first-child {
-    padding-left: 0;
-  }
-
-  .weather {
-    font-size: 30px;
-    line-height: 1.4;
-
-    p {
-      margin: 0;
-    }
-
-    img {
-      vertical-align: middle;
-    }
+/* If Grid is supported, remove the margin we set for the fallback */
+@supports (display: grid) {
+  .module {
+    margin: 0;
   }
 }
